@@ -29,7 +29,8 @@ import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
-import org.jackhuang.hmcl.mod.LocalModFile;
+import org.jackhuang.hmcl.mod.LocalAddonFile;
+import org.jackhuang.hmcl.mod.LocalFileManager;
 import org.jackhuang.hmcl.mod.ModManager;
 import org.jackhuang.hmcl.mod.RemoteMod;
 import org.jackhuang.hmcl.task.FileDownloadTask;
@@ -45,6 +46,7 @@ import org.jackhuang.hmcl.util.Pair;
 import org.jackhuang.hmcl.util.TaskCancellationAction;
 import org.jackhuang.hmcl.util.io.CSVTable;
 
+import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
@@ -59,15 +61,15 @@ import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
 import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 
-public class ModUpdatesPage extends BorderPane implements DecoratorPage {
+public class AddonUpdatesPage<F extends LocalAddonFile> extends BorderPane implements DecoratorPage {
     private final ReadOnlyObjectWrapper<State> state = new ReadOnlyObjectWrapper<>(DecoratorPage.State.fromTitle(i18n("mods.check_updates")));
 
-    private final ModManager modManager;
+    private final LocalFileManager<F> localFileManager;
     private final ObservableList<ModUpdateObject> objects;
 
     @SuppressWarnings("unchecked")
-    public ModUpdatesPage(ModManager modManager, List<LocalModFile.ModUpdate> updates) {
-        this.modManager = modManager;
+    public AddonUpdatesPage(LocalFileManager<F> localFileManager, List<LocalAddonFile.ModUpdate> updates) {
+        this.localFileManager = localFileManager;
 
         getStyleClass().add("gray-background");
 
@@ -114,7 +116,7 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
         exportListButton.setOnAction(e -> exportList());
 
         JFXButton nextButton = FXUtils.newRaisedButton(i18n("mods.check_updates.confirm"));
-        nextButton.setOnAction(e -> updateMods());
+        nextButton.setOnAction(e -> updateFiles());
 
         JFXButton cancelButton = FXUtils.newRaisedButton(i18n("button.cancel"));
         cancelButton.setOnAction(e -> fireEvent(new PageCloseEvent()));
@@ -129,19 +131,19 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
         column.setCellValueFactory(param -> mapper.apply(param.getValue()));
     }
 
-    private void updateMods() {
-        ModUpdateTask task = new ModUpdateTask(
-                modManager,
+    private void updateFiles() {
+        UpdateTask task = new UpdateTask(
+                localFileManager.getDirectory(),
                 objects.stream()
                         .filter(o -> o.enabled.get())
-                        .map(object -> pair(object.data.getLocalMod(), object.data.getCandidate()))
-                        .collect(Collectors.toList()));
+                        .map(object -> pair(object.data.localFile(), object.data.candidate()))
+                        .toList());
         Controllers.taskDialog(
                 task.whenComplete(Schedulers.javafx(), exception -> {
                     fireEvent(new PageCloseEvent());
                     if (!task.getFailedMods().isEmpty()) {
                         Controllers.dialog(i18n("mods.check_updates.failed_download") + "\n" +
-                                        task.getFailedMods().stream().map(LocalModFile::getFileName).collect(Collectors.joining("\n")),
+                                        task.getFailedMods().stream().map(LocalAddonFile::getFileName).collect(Collectors.joining("\n")),
                                 i18n("install.failed"),
                                 MessageDialogPane.MessageType.ERROR);
                     }
@@ -190,21 +192,21 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
     }
 
     private static final class ModUpdateObject {
-        final LocalModFile.ModUpdate data;
+        final LocalAddonFile.ModUpdate data;
         final BooleanProperty enabled = new SimpleBooleanProperty();
         final StringProperty fileName = new SimpleStringProperty();
         final StringProperty currentVersion = new SimpleStringProperty();
         final StringProperty targetVersion = new SimpleStringProperty();
         final StringProperty source = new SimpleStringProperty();
 
-        public ModUpdateObject(LocalModFile.ModUpdate data) {
+        public ModUpdateObject(LocalAddonFile.ModUpdate data) {
             this.data = data;
 
-            enabled.set(!data.getLocalMod().getModManager().isDisabled(data.getLocalMod().getFile()));
-            fileName.set(data.getLocalMod().getFileName());
-            currentVersion.set(data.getCurrentVersion().getVersion());
-            targetVersion.set(data.getCandidate().getVersion());
-            switch (data.getCurrentVersion().getSelf().getType()) {
+            enabled.set(!data.localFile().isDisabled());
+            fileName.set(data.localFile().getFileName());
+            currentVersion.set(data.currentVersion().getVersion());
+            targetVersion.set(data.candidate().getVersion());
+            switch (data.currentVersion().getSelf().getType()) {
                 case CURSEFORGE:
                     source.set(i18n("mods.curseforge"));
                     break;
@@ -274,19 +276,19 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
         }
     }
 
-    public static class ModUpdateTask extends Task<Void> {
+    public static class UpdateTask extends Task<Void> {
         private final Collection<Task<?>> dependents;
-        private final List<LocalModFile> failedMods = new ArrayList<>();
+        private final List<LocalAddonFile> failedMods = new ArrayList<>();
 
-        ModUpdateTask(ModManager modManager, List<Pair<LocalModFile, RemoteMod.Version>> mods) {
+        UpdateTask(Path modDirectory, List<Pair<LocalAddonFile, RemoteMod.Version>> mods) {
             setStage("mods.check_updates.confirm");
             getProperties().put("total", mods.size());
 
             this.dependents = new ArrayList<>();
-            for (Pair<LocalModFile, RemoteMod.Version> mod : mods) {
-                LocalModFile local = mod.getKey();
+            for (Pair<LocalAddonFile, RemoteMod.Version> mod : mods) {
+                LocalAddonFile local = mod.getKey();
                 RemoteMod.Version remote = mod.getValue();
-                boolean isDisabled = local.getModManager().isDisabled(local.getFile());
+                boolean isDisabled = local.isDisabled();
 
                 dependents.add(Task
                         .runAsync(Schedulers.javafx(), () -> local.setOld(true))
@@ -297,7 +299,7 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
 
                             var task = new FileDownloadTask(
                                     remote.getFile().getUrl(),
-                                    modManager.getModsDirectory().resolve(fileName));
+                                    modDirectory.resolve(fileName));
 
                             task.setName(remote.getName());
                             return task;
@@ -307,15 +309,21 @@ public class ModUpdatesPage extends BorderPane implements DecoratorPage {
                                 // restore state if failed
                                 local.setOld(false);
                                 if (isDisabled)
-                                    local.disable();
+                                    local.markDisabled();
                                 failedMods.add(local);
+                            } else if (!local.keepOldFiles()) {
+                                try {
+                                    local.delete();
+                                } catch (IOException e) {
+                                    // ignore
+                                }
                             }
                         })
                         .withCounter("mods.check_updates.confirm"));
             }
         }
 
-        public List<LocalModFile> getFailedMods() {
+        public List<LocalAddonFile> getFailedMods() {
             return failedMods;
         }
 
